--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <rect x="125" y="50" width="15" height="100" fill="url(#gradient)" />
                                 <rect x="125" y="135" width="35" height="15" fill="url(#gradient)" />
                               </svg>
-                            <!-- <img src="assets/logo.png" alt=""> -->
+                            <img src="assets/logo.png" alt="">
                         </div>
                         <div class="links">
                             <ul>
