--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<img src="./imgs/html.png" alt="HTML" width="128" />
 					<img src="./imgs/css.png" alt="CSS" width="128" />
 					<img src="./imgs/javascript.png" alt="JS" width="128" />
-					<img src="./imgs/cpp2.png" width="128" alt="C++" />
+					<img src="./imgs/cpp.png" width="128" alt="C++" />
 					<img src="./imgs/react.png" width="128" alt="React" />
 					<img src="./imgs/flutter.png" width="128" alt="Flutter" />
 					<img src="./imgs/vscode.png" width="128" alt="VS Code" />
