--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./styles.css">
-	<script src="./scripts.js"></script>
 	<link rel="icon" type="image/jpg" href="./imgs/favicon.jpg">
 </head>
 <body>
@@ -178,61 +177,25 @@
 				<a href="#" class="bento-item">
 					<img src="./imgs/portfolio.png" alt="BGCCI" width="100%" />
 				</a>
-				<a href="#" class="bento-item">
-					<img src="./imgs/bento-2.jpg" alt="Churhview" width="100%" />
+				<a href="https://github.com/div910/SustainAware" class="bento-item">
+					<img src="./imgs/sustain.png" alt="Churhview" width="100%" />
+				</a>
+				<a href="https://github.com/div910" class="bento-item">
+					<img src="./imgs/github-3.png" alt="Harley" width="100%" />
+				</a>
+				<a href="https://github.com/div910/FoodRecommendationSystemModel" class="bento-item">
+					<img src="./imgs/food-recc.png" alt="Bunbury" width="100%" />
 				</a>
 				<a href="#" class="bento-item">
-					<img src="./imgs/bento-3.jpg" alt="Harley" width="100%" />
-				</a>
-				<a href="#" class="bento-item">
-					<img src="./imgs/bento-5.jpg" alt="Bunbury" width="100%" />
-				</a>
-				<a href="#" class="bento-item">
-					<img src="./imgs/bento-6.jpg" alt="Running" width="100%" />
+					<img src="./imgs/dino.png" alt="Running" width="100%" />
 				</a>
 				<a href="https://div910.github.io/SchoolProject/index.html" class="bento-item">
 					<img src="./imgs/school.png" alt="School" width="100%" />
 				</a>
 			</div>
 		</section>
-		<section class="chatbot container">
-			<h2>
-				<small>
-					Talk to me
-				</small>
-				Chatbot
-			</h2>
-			<div class="chatbot-blue">
-				<div class="chat-info">
-					<h3>Azure AI Chatbot</h3>
-					<p>I've put together a chatbot here which knows all my skills, work experience and has a copy of my CV/Resume. You can use it to ask questions about me to get a better idea of who I am and what I've done.</p>
-					<p>You can also download my resume here if you want to take a look at it.  I'm currently looking for new opportunities so if you have a project you think I'd be a good fit for, please get in touch!</p>
-					<a href="./Sample_Resume_Template.pdf" class="button black">Download Resume</a>
-				</div>
-				<div class="chat-box">
-					<div class="scroll-area">
-						<ul id="chat-log">
-							<li>
-								<span class="avatar bot">AI</span>
-								<div class="message">
-									Hi, I'm a friendly chatbot that lets you interactive with this portfolio and CV. How can I help?
-								</div>
-							</li>
-							<li>
-								<span class="avatar user">User</span>
-								<div class="message">
-									I have a question to ask you about this resume
-								</div>
-							</li>
-						</ul>
-					</div>
-					<div class="chat-message">
-						<input type="text" placeholder="Hey Adrian, what skills are you best at?">
-						<button class="button black">Send</button>
-					</div>
-				</div>
-			</div>
-		</section>
+        <div class="footer">&copy;<span id="year"></span><span> 2024 Divya Lamba. All rights reserved.</span></div>
 	</main>
+    <script src="./scripts.js"></script>
 </body>
 </html>
