--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 					<h3>Product Intern at Adobe</h3>
 					<div>May'24 - Aug'24</div>
 					<p>Project: A GenAI based project to develop microsites with multi-modal content that align with the theme of the target product’s homepage to power Adobe Marketo Engage.</p>
-                    <p>Research Paper: The Role of Prompt Engineering in Improving Language Understanding and Generation, accepted in the International Journal For Multidisciplinary Research.</p>
+                    <p>Research Paper: The Role of Prompt Engineering in Improving Language Understanding and Generation, published in the Volume 6, Issue 6 (November-December 2024) of the International Journal for Multidisciplinary Research.</p>
 				</article>
 				<article>
 					<figure>
