--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 				Projects
 			</h2>
 			<div class="bento-grid">
-				<a href="#" class="bento-item">
-					<img src="./imgs/portfolio.png" alt="BGCCI" width="100%" />
+				<a href="https://github.com/annannyaa/MinorPro" class="bento-item">
+					<img src="./imgs/drram_fe.png" alt="BGCCI" width="100%" />
 				</a>
 				<a href="https://github.com/div910/SustainAware" class="bento-item">
 					<img src="./imgs/sustain.png" alt="Churhview" width="100%" />
