--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 				Projects
 			</h2>
 			<div class="bento-grid">
-				<a href="https://github.com/annannyaa/MinorPro" class="bento-item">
+				<a href="https://github.com/div910/DRRaM_AI" class="bento-item">
 					<img src="./imgs/drram_fe.png" alt="BGCCI" width="100%" />
 				</a>
 				<a href="https://github.com/div910/SustainAware" class="bento-item">
